--- a/views/admin.html
+++ b/views/admin.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="style/sidebar.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
     <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="style/btn.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/dual-listbox/dist/dual-listbox.css"/>
     <link rel="stylesheet" href="style/duallist.css">
     <link rel="stylesheet" href="style/kakao_map.css">
@@ -39,7 +40,7 @@
                     <span id="username" style="height: 28px;">홍길동</span>
                 </li> -->
                 <li class="navbar-text usericon" style="color: black; padding: 0.5rem;">
-                    <a id="username" data-bs-toggle="dropdown" role="button" style="height: 28px;"></a>
+                    <a id="username" data-bs-toggle="dropdown" role="button" style="height: 28px; display: flex; align-items: center;"></a>
                     <ul class="dropdown-menu" aria-labelledby="username" style="width: 2rem; min-width: 100px;">
                         <li><a class="dropdown-item" href="/modify_profile">정보수정</a></li>
                         <li><a class="dropdown-item" href="#">기기정보</a></li>
@@ -102,7 +103,7 @@
                                     <div class="input-group flex-nowrap">
                                         <span class="input-group-text">학교</span>
                                         <input type="text" id="school" name="school" class="form-control" maxlength="45">
-                                        <button type="button" class="btn btn-success" onclick="openModal()" aria-controls="home" aria-selected="true">검색</button>
+                                        <button type="button" class="btn btn-purple" onclick="openModal()" aria-controls="home" aria-selected="true">검색</button>
                                     </div>
                                 </div>
                                 <div style="padding-bottom: 0.5rem; display: none;" class="col-sm-6 col-lg-3" id="gen_region">
@@ -145,7 +146,7 @@
                                     </div>
                                 </div>
                                 <div class="d-grid col-sm-6 col-lg-1" style="padding-bottom: 0.5rem;">
-                                    <button id="upload_button" onclick="search()" class="btn btn-primary waves-effect waves-light" style="float:right; min-width: 58.75px;">검색</button>
+                                    <button id="upload_button" onclick="search()" class="btn btn-purple waves-effect waves-light" style="float:right; min-width: 58.75px;">검색</button>
                                 </div>
                             </div>
                         </div>
@@ -304,7 +305,6 @@
     
     <script>
         var multiplelist = null;
-        var devices = [];
 
         // datatables
         function ap_table() {
