--- a/views/dashboard_premium.html
+++ b/views/dashboard_premium.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="style/sidebar.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
     <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="style/btn.css">
     <link rel="stylesheet" href="style/circle_progressbar.css">
     <link rel="stylesheet" href="style/dashboard.css">
 </head>
@@ -32,7 +33,7 @@
                     <span id="level"></span>
                 </li>
                 <li class="navbar-text usericon" style="color: black; padding: 0.5rem;">
-                    <a id="username" data-bs-toggle="dropdown" role="button" style="height: 28px;"></a>
+                    <a id="username" data-bs-toggle="dropdown" role="button" style="height: 28px; display: flex; align-items: center;"></a>
                     <ul class="dropdown-menu" aria-labelledby="username" style="width: 2rem; min-width: 100px;">
                         <li><a class="dropdown-item" href="/modify_profile">정보수정</a></li>
                         <li><a class="dropdown-item" href="#">기기정보</a></li>
@@ -92,7 +93,7 @@
                                 <img class="video-item" src="imgs/sample.png" style="border-radius: 10px; margin-bottom: 1rem; position: relative;" id="plant">
                                 <img class="video-item" src="imgs/sample2.png" style="border-radius: 10px; margin-bottom: 1rem; position: relative;" id="fish" hidden>
                                 <div class="video-btn" style="position: absolute; margin: 1rem;">
-                                    <button type="button" class="btn btn-primary btn-sm" onclick="display()" id="display-btn" value='0' style="pointer-events: none;">전환</button>
+                                    <button type="button" class="btn btn-purple btn-sm" onclick="display()" id="display-btn" value='0' style="pointer-events: none;">전환</button>
                                 </div>
                             </div>
                         </div>
@@ -103,7 +104,7 @@
                                      
                                     <ul class="nav nav-pills w-100">
                                         <li class="nav-item">
-                                            <a class="nav-link active" href="#" data-bs-target="#temp-tabs"
+                                            <a class="nav-link btn-purple active" href="#" data-bs-target="#temp-tabs"
                                                 data-bs-toggle="tab" style="padding: 5px;">온도</a>
                                         </li>
                                         <li class="nav-item">
@@ -183,6 +184,7 @@
         const params = new URLSearchParams(location.search);
         const device_id = params.get('device');
         const service = params.get('service');
+        const device_level = params.get('level');
         const colors = ["#FF1654", "#247BA0", "#009000"]
         
         $(document).ready(function () {
@@ -323,21 +325,24 @@
             let id = sensor.id;
             let val = Number(!Number($("#" + id).attr('value')));
 
-            $.ajax({
-                url: '/update_sensor',
-                method: 'get',
-                data: {
-                    device_id: device_id,
-                    sensor: id,
-                    val: val,
-                },
-                success: function(data) {
-                    $("#" + id).attr('value', val);
-                    $("#pg-" + id).attr('data-value', val==0 ? 0 : 100)
-                    $("#progress-hum-text-" + id).text(val==1?'ON':'OFF')
-                    update_pg();
-                }
-            })
+            if (device_level < 1) alert('기기제어 권한이 없습니다.');
+            else {
+                $.ajax({
+                    url: '/update_sensor',
+                    method: 'get',
+                    data: {
+                        device_id: device_id,
+                        sensor: id,
+                        val: val,
+                    },
+                    success: function(data) {
+                        $("#" + id).attr('value', val);
+                        $("#pg-" + id).attr('data-value', val==0 ? 0 : 100)
+                        $("#progress-hum-text-" + id).text(val==1?'ON':'OFF')
+                        update_pg();
+                    }
+                })
+            }
         }
 
         function display() {
