--- a/views/index.html
+++ b/views/index.html
@@ -66,12 +66,12 @@
                     <span id="level"></span>
                 </li>
                 <li class="navbar-text usericon" style="color: black; padding: 0.5rem;">
-                    <a id="username" data-bs-toggle="dropdown" role="button" style="height: 28px;"></a>
+                    <a id="username" data-bs-toggle="dropdown" role="button" style="height: 28px; display: flex; align-items: center;"></a>
                     <ul class="dropdown-menu" aria-labelledby="username" style="width: 2rem; min-width: 100px;">
                         <li><a class="dropdown-item" href="/modify_profile">정보수정</a></li>
-                        <li><a class="dropdown-item" href="#">기기정보</a></li>
+                        <!-- <li><a class="dropdown-item" href="#" id="dropdown_device">기기설정</a></li> -->
                         <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="#" onclick="javascript:logout()">로그아웃</a></li>
+                        <li><a class="dropdown-item" href="#" onclick="logout()">로그아웃</a></li>
                     </ul>
                 </li>
             </ui>
@@ -143,7 +143,7 @@
                     console.log(data);
                     $.each(data, (i, val) => {
                         html += `<div class="card device_card" style="margin-bottom: 1rem;">
-                                    <a href="#" onclick="window.location = ('/dashboard${val.service==1?'_premium':''}?name=${val.name}&device=${val.device_id}&service=${val.service}')" style="color: black;">
+                                    <a href="#" onclick="window.location = ('/dashboard${val.service==1?'_premium':''}?name=${val.name}&device=${val.device_id}&service=${val.service}&level=${val.link_level}')" style="color: black;">
                                         <div class="card-body devices" style="display: flex;">
                                             <img class="device_img" src="imgs/sample.png">
                                             <div class="row card_row">
