--- a/views/members/forgot_pw.html
+++ b/views/members/forgot_pw.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
     <link rel="stylesheet" href="/style/member.css">
+    <link rel="stylesheet" href="/style/btn.css">
 </head>
 
 <body class="login-page" style="min-height: 496.781px;">
@@ -22,7 +23,7 @@
                 <div class="mb-3">
                     <div class="input-group">
                         <input type="email" name="id" id="uid" class="form-control" placeholder="아이디" pattern="[a-zA-Z0-9]+[@][a-zA-Z0-9]+[.]+[a-zA-Z]+[.]*[a-zA-Z]*">
-                        <button type="button" class="btn btn-success" onclick="sendmail()">인증</button>
+                        <button type="button" class="btn btn-purple" onclick="sendmail()">인증</button>
                     </div>
                     <label id="lUid" style="color: red;" hidden>아이디를 입력하세요.</label>
                 </div>
@@ -30,12 +31,12 @@
                     <div class="input-group">
                         <input type="text" name="valid" id="valid" class="form-control" placeholder="인증번호"
                         required oninvalid="this.setCustomValidity('인증번호를 입력하세요.')" oninput="this.setCustomValidity('')">
-                        <button type="button" class="btn btn-success" id="mail_button" onclick="authMail()" disabled>확인</button>
+                        <button type="button" class="btn btn-purple" id="mail_button" onclick="authMail()" disabled>확인</button>
                     </div>
                 </div>
                 <!-- /.col -->
                 <div class="mb-3" style="margin-top: 25px;">
-                    <button type="button" class="btn btn-success btn-block" id="reg" onclick="change()" disabled>비밀번호 찾기</button>
+                    <button type="button" class="btn btn-purple btn-block" id="reg" onclick="change()" disabled>비밀번호 찾기</button>
                 </div>
             </form>
 
@@ -77,7 +78,7 @@
                     <label id="lUpw" style="color: red;" hidden>비밀번호를 확인하세요.</label>
                 </div>
                 <div class="mb-3" style="margin-top: 25px;">
-                    <button type="button" class="btn btn-success btn-block" id="reg2" onclick="change_pw()">비밀번호 변경</button>
+                    <button type="button" class="btn btn-purple btn-block" id="reg2" onclick="change_pw()">비밀번호 변경</button>
                 </div>
             </form>
             <div class="mb-3" style="font-size: 11px; ">
@@ -119,6 +120,13 @@
     var auth = false;
 
     function sendmail() {
+        let e = $("#uid").val();
+        email_regex = /^[A-Za-z0-9_\.\-]+@[A-Za-z0-9\-]+\.[A-za-z0-9\-]+/;
+        if(!email_regex.test(e)) {
+            alert('이메일 형식이 올바르지 않습니다.');
+            return;
+        }
+
         $.ajax({
             url: '/duplicate',
             method: 'post',
