--- a/views/members/login.html
+++ b/views/members/login.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
     <link rel="stylesheet" href="style/style.css">
     <link rel="stylesheet" href="/style/member.css">
+    <link rel="stylesheet" href="/style/btn.css">
 </head>
 
 <body class="login-page" style="min-height: 496.781px;">
@@ -44,14 +45,14 @@
                      required oninvalid="this.setCustomValidity('비밀번호를 확인하세요.')" oninput="this.setCustomValidity('')">
                 </div>
                 <div class="mb-3">
-                    <div class="icheck-primary">
-                        <input type="checkbox" id="cookie" name="cookie">
-                        <label for="cookie" style="font-weight: 450">아이디 저장</label>
-                    </div>
+                    <input type="checkbox" id="cookie" name="cookie">
+                    <label for="cookie" style="font-weight: 450">아이디 저장</label>
+                    <!-- <div class="icheck-primary">
+                    </div> -->
                 </div>
                 <!-- /.col -->
                 <div class="mb-3" style="margin-top: 25px;">
-                    <button type="submit" class="btn btn-success btn-block">로그인</button>
+                    <button type="submit" class="btn btn-purple btn-block">로그인</button>
                 </div>
             </form>
 
@@ -61,9 +62,6 @@
                     <li style="float: left;">
                         <a href="/register" class="text-center">회원가입</a>
                     </li>
-                    <!-- <li style="float: left;">
-                        <a href="/forgot_id" class="text-center">아이디 분실</a>
-                    </li> -->
                     <li style="float: left;">
                         <a href="/forgot_pw" class="text-center">비밀번호 분실</a>
                     </li>
@@ -77,6 +75,20 @@
 <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
 <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<script>
+    $(document).ready(function() {
+        $.ajax({
+            url: '/check_idbox',
+            method: 'post',
+            success: function(data) {
+                if (data !== undefined && data !== '') {
+                    $('#uid').val(data);
+                    $('#cookie').prop('checked', true);
+                }
+            }
+        })
+    }) 
+</script>
 </body>
 </html>
 </html>
