--- a/views/members/modify_profile.html
+++ b/views/members/modify_profile.html
@@ -9,9 +9,12 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/dual-listbox/dist/dual-listbox.css"/>
+    <link rel="stylesheet" href="style/duallist.css">
     <link rel="stylesheet" href="style/style.css">
     <link rel="stylesheet" href="style/sidebar.css">
     <link rel="stylesheet" href="style/modify_profile.css">
+    <link rel="stylesheet" href="style/btn.css">
     <link rel="stylesheet" href="style/kakao_map.css">
 </head>
 
@@ -32,7 +35,7 @@
                     <span id="level"></span>
                 </li>
                 <li class="navbar-text usericon" style="color: black; padding: 0.5rem;">
-                    <a id="username" data-bs-toggle="dropdown" role="button" style="height: 28px;"></a>
+                    <a id="username" data-bs-toggle="dropdown" role="button" style="height: 28px; display: flex; align-items: center;"></a>
                     <ul class="dropdown-menu" aria-labelledby="username" style="width: 2rem; min-width: 100px;">
                         <li><a class="dropdown-item" href="/modify_profile">정보수정</a></li>
                         <li><a class="dropdown-item" href="#">기기정보</a></li>
@@ -191,6 +194,9 @@
                     <div class="mb-3" style="margin-top: 25px;">
                         <button type="submit" class="btn btn-success btn-block" id="reg">회원정보수정</button>
                     </div>
+                    <div class="mb-3" style="margin-top: 25px;" id="select_device">
+                        
+                    </div>
                     <div class="mb-3" style="margin-top: 25px;">
                         <button type="button" class="btn btn-danger btn-block" id="delete_member" onclick="">회원탈퇴</button>
                     </div>
@@ -231,51 +237,60 @@
             </div>
         </div>
     </div>
+
+    <div class="modal" id="device_modal">
+        <div class="modal-dialog modal-lg modal-fullscreen-lg-down">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="modal_title">title</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body" id="modal-body">
+                    <select multiple="multiple" class="multiple-select" id="modal-select">
+                    </select>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">닫기</button>
+                    <button type="button" class="btn btn-primary" id="modal_success_btn" onclick="updateDevice(this)">완료</button>
+                </div>
+            </div>
+        </div>
+    </div>
     <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
     <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/dual-listbox/dist/dual-listbox.min.js"></script>
     <script src="js/sidebar.js"></script>
     <script src="/js/duplicate.js"></script>
     <script src="/js/member_control.js"></script>
     <script src="/js/memberAuth.js"></script>
     <script src="/js/draw_devices.js"></script>
+    <script src="/js/permission_manage.js"></script>
     <script src="//dapi.kakao.com/v2/maps/sdk.js?appkey=826fecb6d8bc041c95f1ebfbd7dedcdc&libraries=services"></script>
     <script src="/js/kakao_map.js"></script>
     <script>
         var gen = ['gen_school', 'gen_grade', 'gen_class', 'gen_number']
 
         $(document).ready(function () {
-            $.ajax({
-                url: "/session",
-                method: "get",
-                async: false,
-                success: function (data) {
-                    
-                    if (data[0].auth == false) {
-                        alert("로그인 후 이용해주세요.");
-                        location.replace('/login');
-                    }
-                    else {
-                        id = data[0].id;
-                        $("#userlevel").val(data[0].level).prop("selected", true);
+            $("#userlevel").val(member[0].level).prop("selected", true);
 
-                        if (data[0].level == 2 || data[0].level == 4) {
-                            $("#region").attr('disabled', false);
-                            $("#region").val(data[0].school);
-                            $("#gen_region").show()
-                            $.each(gen, (i, v) => {
-                                $(`#${v}`).hide()
-                                $(`#${v.split("gen_")[1]}`).attr('disabled', true)
-                            })
-                        }
-                        $("#school").val(data[0].school)
-                        $("#grade").val(data[0].grade)
-                        $("#number").val(data[0].number)
-                        $("#class").val(data[0].class)
-                        $("#uname").val(data[0].name)
-                    }
-                }
-            })
+            if (member[0].level == 3 || member[0].level == 4) {
+                $("#select_device").append(`<button type="button" class="btn btn-success btn-block" onclick="modal_func('${member[0].id}', ${member[0].level}, 0)">권한관리</button>`)
+            }
+            if (member[0].level == 2 || member[0].level == 4) {
+                $("#region").attr('disabled', false);
+                $("#region").val(member[0].school);
+                $("#gen_region").show()
+                $.each(gen, (i, v) => {
+                    $(`#${v}`).hide()
+                    $(`#${v.split("gen_")[1]}`).attr('disabled', true)
+                })
+            }
+            $("#school").val(member[0].school)
+            $("#grade").val(member[0].grade)
+            $("#number").val(member[0].number)
+            $("#class").val(member[0].class)
+            $("#uname").val(member[0].name)
 
             $("#upw2").on("focusout", function (e) {
                 console.log(123);
