--- a/public/style/duallist.css
+++ b/public/style/duallist.css
@@ -3,7 +3,7 @@
 }
 .dual-listbox__button {
     margin-right: 0.1rem !important;
-    background-color: #157347 !important;
+    background-color: #6575d1 !important;
 }
 @media screen and (max-width: 991px) {
 
