--- a/views/dashboard_premium.html
+++ b/views/dashboard_premium.html
@@ -90,8 +90,8 @@
                     <div class="row">
                         <div class="video-card">
                             <div class="card-inner card" onclick="display()" style="cursor: pointer;">
-                                <img class="video-item" src="imgs/sample.png" style="border-radius: 10px; margin-bottom: 1rem; position: relative;" id="plant">
-                                <img class="video-item" src="imgs/sample2.png" style="border-radius: 10px; margin-bottom: 1rem; position: relative;" id="fish" hidden>
+                                <img class="video-item" src="imgs/sample.png" id="plant">
+                                <img class="video-item" src="imgs/sample2.png" id="fish" hidden>
                                 <div class="video-btn" style="position: absolute; margin: 1rem;">
                                     <button type="button" class="btn btn-purple btn-sm" onclick="display()" id="display-btn" value='0' style="pointer-events: none;">전환</button>
                                 </div>
