--- a/views/admin.html
+++ b/views/admin.html
@@ -43,7 +43,6 @@
                     <a id="username" data-bs-toggle="dropdown" role="button" style="height: 28px;"></a>
                     <ul class="dropdown-menu" aria-labelledby="username" style="width: 2rem; min-width: 100px;">
                         <li><a class="dropdown-item" href="/modify_profile">정보수정</a></li>
-                        <li><a class="dropdown-item" href="#">기기정보</a></li>
                         <li><hr class="dropdown-divider"></li>
                         <li><a class="dropdown-item" href="#" onclick="javascript:logout()">로그아웃</a></li>
                     </ul>
@@ -65,10 +64,10 @@
                     </a>
                     <ul id="pages" class="sidebar-dropdown list-unstyled collapse" data-bs-parent="#sidebar">
                     </ul>
-                    <a href="/student_manage" class="nav_link" id="stumanag">
+                    <a href="/student_manage" class="nav_link" id="stumanag" title="학생관리">
                         <i class='bx bx-user nav_icon'></i> <span class="nav_name">학생관리</span>
                     </a>
-                    <a href="/admin" class="nav_link active" id="settings">
+                    <a href="/admin" class="nav_link active" id="settings" title="설정">
                         <i class='bx bx-cog nav_icon'></i>
                         <span class="nav_name">설정</span>
                     </a>
