--- a/views/dashboard_premium.html
+++ b/views/dashboard_premium.html
@@ -36,7 +36,6 @@
                     <a id="username" data-bs-toggle="dropdown" role="button" style="height: 28px;"></a>
                     <ul class="dropdown-menu" aria-labelledby="username" style="width: 2rem; min-width: 100px;">
                         <li><a class="dropdown-item" href="/modify_profile">정보수정</a></li>
-                        <li><a class="dropdown-item" href="#">기기정보</a></li>
                         <li>
                             <hr class="dropdown-divider">
                         </li>
@@ -65,10 +64,10 @@
                         <i class='bx bx-bar-chart-alt-2 nav_icon'></i>
                         <span class="nav_name">차트</span>
                     </a>
-                    <a href="/student_manage" class="nav_link" id="stumanag">
+                    <a href="/student_manage" class="nav_link" id="stumanag" title="학생관리">
                         <i class='bx bx-user nav_icon'></i> <span class="nav_name">학생관리</span>
                     </a>
-                    <a href="/admin" class="nav_link" id="settings">
+                    <a href="/admin" class="nav_link" id="settings" title="설정">
                         <i class='bx bx-cog nav_icon'></i>
                         <span class="nav_name">설정</span>
                     </a>
