--- a/views/index.html
+++ b/views/index.html
@@ -91,10 +91,10 @@
                     </a>
                     <ul id="pages" class="sidebar-dropdown list-unstyled collapse" data-bs-parent="#sidebar">
                     </ul>
-                    <a href="/student_manage" class="nav_link" id="stumanag">
+                    <a href="/student_manage" class="nav_link" id="stumanag" title="학생관리">
                         <i class='bx bx-user nav_icon'></i> <span class="nav_name">학생관리</span>
                     </a>
-                    <a href="/admin" class="nav_link" id="settings">
+                    <a href="/admin" class="nav_link" id="settings" title="설정">
                         <i class='bx bx-cog nav_icon'></i>
                         <span class="nav_name">설정</span>
                     </a>
